# ce-ashmaize

./: .env.example  Cargo.toml  README.md  challenges.json  main.py  package-lock.json  package.json  summary.md
cli_hunt/: README.md
cli_hunt/python_orchestrator/: extract_challenges.py  main.py  pyproject.toml  recover_available_challenges.py  reset_duplicates.py
cli_hunt/rust_solver/: Cargo.toml
cli_hunt/rust_solver/src/: main.rs  tests.rs
src/: checknight.ts  index.ts
