[package]
name = "ashmaize"
version = "0.1.0"
edition = "2024"
license = "MIT Or Apache-2.0"
repository = "https://github.com/input-output-hk/ce-ashmaize"

[dependencies]
cryptoxide = "~0.5.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
randomx-rs = "1.3"
hex = "0.4"
indicatif = "0.17"
getrandom = "0.3"

[[bench]]
name = "bench"
harness = false

[workspace]
resolver = "3"
members = ["crates/ashmaize-web", "crates/ashmaize-webdemo"]
exclude = ["cli_hunt/rust_solver"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT Or Apache-2.0"
repository = "https://github.com/input-output-hk/ce-ashmaize"
description = """Ashmaize is a Random VM. Just like RandomX, except its core algorithm is optimised
for mobile and webrowser development."""
